<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/txtaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/locsettitle_str"/>

        <RadioGroup
            android:id="@+id/location_rd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/yes_rd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes_str"
                android:checked="true" />

            <RadioButton
                android:id="@+id/no_rd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_str" />

        </RadioGroup>

        <TextView
            android:id="@+id/txtaddress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/footnote_str"/>

    </LinearLayout>

    <WebView
        android:id="@+id/locationdisc_webview"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />

    <!--
    <TextView
        android:id="@+id/location_txt"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:maxLines="20"
        android:scrollbars="vertical"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/placeholder_location"/>

-->
</LinearLayout>