<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="10dp"
        android:layout_weight="2">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerInside"
            android:src="@drawable/play"
            android:background="@null"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:id="@+id/play_btn" />

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="#ffffff"
            android:scaleType="fitCenter" />

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Details"
            android:background="#9d9d9d"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Title"
            android:id="@+id/title_txt"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Country"
            android:id="@+id/country_txt"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Language"
            android:id="@+id/language_txt"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_str"
            android:id="@+id/download_btn"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/url_copy"
            android:id="@+id/copy_btn"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/properties_str"
            android:background="#9d9d9d"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_str"
            android:id="@+id/size_txt"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </LinearLayout>

</LinearLayout>