<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >


        <ImageButton
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.4"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:id="@+id/sharesawboapp_btn"
            android:src="@drawable/shareapp"
            android:background="#ffffff"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <Button
            android:id="@+id/sharesawboapp_txt_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="#ffffff"
            android:textColor="#337085"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/sharesawbodesc_str" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.4"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:id="@+id/connect_btn"
            android:src="@drawable/bluetoothlogo"
            android:background="#ffffff"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp">
            <Button
                android:id="@+id/sharenormal_txt_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:background="#ffffff"
                android:textColor="#337085"
                android:text="@string/receivedesc_str" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/mustopen_str"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/send_txt_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senddesc_str"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="#ffffff"
            android:textColor="#337085"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#aaaaaa" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_str"
            android:lines="2"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

</LinearLayout>
